# Distributed-Graph-Database

./: .gitignore  1.db  3.db  CMakeLists.txt  Makefile  ORM  ORM.cpp  README.md  Readme.md  Server.cpp  Test.cpp  client  client.cpp  crud.h  main.cpp  prueba.db  server  server.cpp
Code/: 3.db  5.db  Test.cpp  client  client.cpp  main  server  server.cpp  test  test.db
TDD/: driver  driver.cpp  pc2.db  pc4.db  pc5.db
TDD/HardMode/: NP_NA.cpp  biblioteca.h  client.cpp  cliente  db_NA_1.db  esclavo  orm.hpp
TDD/hash/: hash  hash.cpp  rsa.hpp
TDD/orm/: ORM.cpp  orm.hpp  test.db
Wrapper/: Client.cpp  Read.cpp  ReadMe.md  Server.cpp  Write.cpp
idea/: modules.xml
source/: ORM.hpp  ORM2.hpp  SQLite.h  cliente.cpp  graph.h  nodos.cpp  schema.hpp  server.cpp  test.cpp
